fix(example): 修复example对slidePage的引用

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>simple - slidePage.js</title>
-	<link rel="stylesheet" type="text/css" href="/dist/slidePage.min.css">
+	<link rel="stylesheet" type="text/css" href="../dist/slidePage.min.css">
 	<style type="text/css">
 		html,
 		body {
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="/dist/slidePage.min.js"></script>
+	<script type="text/javascript" src="../dist/slidePage.min.js"></script>
 	<script type="text/javascript">
 		var slide = new slidePage()
 	</script>
