--- a/examples/animated.html
+++ b/examples/animated.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>animated - slidePage.js</title>
-	<link rel="stylesheet" type="text/css" href="/dist/slidePage.min.css">
+	<link rel="stylesheet" type="text/css" href="../dist/slidePage.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 	<style type="text/css">
 		html,
@@ -182,7 +182,7 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="/dist/slidePage.min.js"></script>
+	<script type="text/javascript" src="../dist/slidePage.min.js"></script>
 	<script type="text/javascript">
 		var slide = new slidePage({
 			useAnimation: true
