--- a/examples/custom.html
+++ b/examples/custom.html
@@ -296,7 +296,7 @@
 			<div class="next-page" onclick="slide.slideNext()">V</div>
 		</nav>
 	</div>
-	<script type="text/javascript" src="/dist/slidePage.min.js"></script>
+	<script type="text/javascript" src="../dist/slidePage.min.js"></script>
 	<script type="text/javascript">
 		function GetQueryString(name){
 			var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
