--- a/examples/drag.html
+++ b/examples/drag.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 	<style type="text/css">
 		.slide-container .slide-page.transition {
-			transition: all 600ms cubic-bezier(.21,1,.21,1);
-			-webkit-transition: all 600ms cubic-bezier(.21,1,.21,1);
+			transition: transform 600ms cubic-bezier(.21,1,.21,1);
+			-webkit-transition: transform 600ms cubic-bezier(.21,1,.21,1);
 		}
 		html,
 		body {
