feat: 改造webpack构建, 使用es6语法

--- a/examples/fullFeatured.html
+++ b/examples/fullFeatured.html
@@ -368,7 +368,7 @@
 			<div class="next-page" onclick="slide.slideNext()">V</div>
 		</nav>
 	</div>
-	<script type="text/javascript" src="../dist/slidePage.min.js"></script>
+	<script type="text/javascript" src="../dist/main.min.js"></script>
 	<script type="text/javascript">
 		function GetQueryString(name){
 			var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
